# accelerometer-test

./: CMakeLists.txt  README.md  main.cpp
